Added working session provider and updated api with logout function
